--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GH_TOKEN: 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
+          GIST_ID: DaSeul-Seo
           TIMEZONE: Asia/Seoul
