--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,5 +13,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: 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
-          GIST_ID: DaSeul-Seo
+          GIST_ID: bd85455bb5236c7eeed4c7a806e770ec
           TIMEZONE: Asia/Seoul
